# linkedin-poster

./: .env.example  .gitignore  Makefile  README.md  langgraph.json  pyproject.toml
.github/workflows/: integration-tests.yml  unit-tests.yml
data/memory/: comprehension_preferences.json  post_format_preferences.json  topic_preferences.json
eval/: run_eval.py
scripts/: get_linkedin_token.py
src/: graph.py  state.py
src/agents/: __init__.py  arxiv_fetcher.py  conversation_agent.py  human_approval.py  human_paper_review.py  memory_loader.py  memory_updater.py  post_writer.py  publisher.py  relevance_ranker.py  trend_scanner.py
src/config/: settings.py
src/core/: chat_utils.py  constants.py  paths.py
src/memory/: __init__.py  apply_events.py  models.py  store.py
src/services/: arxiv_client.py  google_trends.py  linkedin_api.py  logger.py  utils.py
src/tools/: research.py
tests/: conftest.py  test_checkpoint_basic.py  test_env_validation.py  test_graph_execution.py  test_memory.py  test_memory_apply_events.py  test_memory_persistence_flow.py  test_memory_store_defaults.py  test_node_arxiv_fetcher.py  test_node_conversation_agent.py  test_node_human_approval.py  test_node_human_paper_review.py  test_node_memory_loader.py  test_node_memory_updater.py  test_node_post_writer.py  test_node_relevance_ranker.py  test_node_trend_scanner.py  test_nodes_interrupts.py  test_performance_budget.py  test_routers.py  test_services_google_trends.py  test_state_immutability.py  verify_conversation_agent.py  verify_linkedin_posting.py
tests/fixtures/: sample_trends.json  (+2 more)
(+18 files in other folders)
