[project]
name = "linkedin-poster"
version = "0.1.0"
description = "LangGraph agent for generating LinkedIn posts from trending ArXiv papers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain>=0.3.0",
    "python-dotenv",
    "arxiv",
    "pytrends",
    "requests",
    "httpx",
    "tenacity",
    "pydantic",
    "langsmith",
    "pytest",
    "pytest-asyncio",
    "pydantic-settings",
    "langchain-tavily"
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
